--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -13,6 +13,9 @@ RUN yum -y update; yum clean all
 RUN yum -y install sudo; yum clean all; \
 yum -y install openssh-server passwd; yum clean all
 
+# dnf 설치
+RUN yum install -y dnf;
+
 # code-server 설치
 RUN yum -y install wget;
 
@@ -25,7 +28,7 @@ yum -y install terraform; yum clean all
 ADD ./start.sh /start.sh
 RUN mkdir /var/run/sshd
 
-RUN ssh-keygen -t rsa -f /etc/ssh/ssh_host_rsa_key -N '' 
+RUN ssh-keygen -t rsa -f /etc/ssh/ssh_host_rsa_key -N ''
 
 RUN chmod 755 /start.sh
 # EXPOSE 23
